1 - Criação da solução, depois criação das Camadas API, CORE, DOMAIN, INFRA, SERVICES.
2 - Criação da entity Base e entities do projeto na camada Domain.
3 - Transformando entidades Anêmicas em entidades ricas, ou seja, usando private set e transformando em entidade auto validadora.
4 - Instalando o Fluent Validation e criando a primeira Validação, que é a UserValidator.
5 - Criando Interface e implementações de Repositórios.
6 - Instalando o pacote nuget "EntityFrameworkCore", "EntityFrameworkCore.Design", "EntityFrameworkCore.Tools"
7 - Criando o UserMap para mapeamento das tabelas, organizando o contexto do banco de dados e também o Repositório de User
8