@@ -11,10 +11,26 @@ namespace PizzaBraz.Infra.Context
         public PizzaBrazContext(DbContextOptions<PizzaBrazContext> options) : base(options) { }
 
         public virtual DbSet<User> Users { get; set; }
+        public virtual DbSet<Company> Companies { get; set; }
+        public virtual DbSet<Customer> Customers { get; set; }
+        public virtual DbSet<CustomerToken> CustomerTokens { get; set; }
+        public virtual DbSet<CustomerAddress> CustomerAddresses { get; set; }
+        public virtual DbSet<Product> Products { get; set; }
+        public virtual DbSet<ProductType> ProductTypes { get; set; }
+        public virtual DbSet<Order> Orders { get; set; }
+        public virtual DbSet<OrderItem> OrderItems { get; set; }
 
         protected override void OnModelCreating(ModelBuilder builder)
         {
             builder.ApplyConfiguration(new UserMap());
+            builder.ApplyConfiguration(new CompanyMap());
+            builder.ApplyConfiguration(new CustomerMap());
+            builder.ApplyConfiguration(new CustomerTokenMap());
+            builder.ApplyConfiguration(new CustomerAddressMap());
+            builder.ApplyConfiguration(new ProductMap());
+            builder.ApplyConfiguration(new ProductTypeMap());
+            builder.ApplyConfiguration(new OrderMap());
+            builder.ApplyConfiguration(new OrderItemMap());
         }
     }
 }
