@@ -1,0 +1,19 @@
+﻿using Microsoft.EntityFrameworkCore;
+using Microsoft.EntityFrameworkCore.Metadata.Builders;
+using PizzaBraz.Domain.Entities;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace PizzaBraz.Infra.Mappings
+{
+    public class CustomerAddressMap : IEntityTypeConfiguration<CustomerAddress>
+    {
+        public void Configure(EntityTypeBuilder<CustomerAddress> builder)
+        {
+            builder.ToTable("customer_address");
+        }
+    }
+}
