@@ -1,0 +1,13 @@
+﻿using Microsoft.EntityFrameworkCore.Metadata.Builders;
+using Microsoft.EntityFrameworkCore;
+using PizzaBraz.Domain.Entities;
+namespace PizzaBraz.Infra.Mappings
+{
+    public class ProductTypeMap : IEntityTypeConfiguration<ProductType>
+    {
+        public void Configure(EntityTypeBuilder<ProductType> builder)
+        {
+            builder.ToTable("product_type");
+        }
+    }
+}
